@@ -1,8 +1,9 @@
 2.34.2
 ======
-July 25, 2021
+July 29, 2021
 - Improved usage (--help) text
 - Issue gwen-interpreter/gwen-web#79: resolve attributes in examples tables
+- Fix parallel scenario-level execution for Gherkin's spoken languages/dialects
 
 2.34.1
 ======
